--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-{% dump loop.totalLength|round(0, 'floor') %}
+{% dump (loop.totalLength/3)|round(0, 'floor') %}
 
 
             {% if loop.last %}
