--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -5,8 +5,9 @@
 
     <main class="container">
 
+        {% set itemsPerPage = 10 %}
 
-        {% set itemsPerPage=10, currentPage = 8, app.request.get('page', 1) %} {% set start = ((currentPage - 1) * itemsPerPage) %}
+        {% set boo, currentPage = 8, app.request.get('page', 1) %} {% set start = ((currentPage - 1) * itemsPerPage) %}
         {% gimmelist article from searchResults|limit(app.request.get('limit', 10))|order(app.request.get('field', 'publishedAt'), app.request.get('direction', 'desc')) with {
             term: app.request.get('q', ''),
             page: app.request.get('page', 1),
