--- a/views/widgets/inc/pagination.html.twig
+++ b/views/widgets/inc/pagination.html.twig
@@ -69,6 +69,18 @@
 <style>
 
 
-    
+    .page-link {
+        border: unset;
+    }
+
+    .page-link a:hover {
+        color: #dc3545;
+    }
+
+    .page-item.active .page-link{
+        background-color: #dc3545;
+        border-color: #dc3545;
+    }
+
 
 </style>
