--- a/views/widgets/inc/pagination.html.twig
+++ b/views/widgets/inc/pagination.html.twig
@@ -76,6 +76,8 @@
 
     .page-link a:hover {
         color: #dc3545;
+        background-color: inherit;
+
     }
 
     .page-item.active .page-link{
