--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -4,7 +4,15 @@
         <input type="text" name="q" placeholder="search" value="">
         <button type="submit">Submit</button>
     </form>
+    <input type="text" name="q" placeholder="boo" value="">
 
 
-    {#    <gcse:searchbox-only></gcse:searchbox-only>#}
 </div>
+
+
+<script>
+
+
+    alert('boo');
+
+</script>
