--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -96,6 +96,10 @@
             max-width: max-content;
         }
 
+        .text-primary{
+            color: unset;
+        }
+
     </style>
 
 
