--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -52,7 +52,7 @@
 
                     </div>
 
-                    <div class="col-md-3 px-10 align-items-center justify-content-center">
+                    <div class="col-md-3 px-10 align-items-center justify-content-center" style="max-width:fit-content">
 
                         {% if article.featureMedia %}
                             {% gimme rendition with { 'media': article.featureMedia, 'name': '1250x600', 'fallback': 'original' } %}
