--- a/views/widgets/inc/pagination.html.twig
+++ b/views/widgets/inc/pagination.html.twig
@@ -74,15 +74,24 @@
         color: inherit;
     }
 
-    .page-link a:hover {
-        color: #dc3545;
-        background-color: inherit;
 
-    }
 
     .page-item.active .page-link{
         background-color: #dc3545;
         border-color: #dc3545;
+    }
+
+    .page-link a {
+        text-decoration: none;
+        color:#7F0F54;
+    }
+    .page-link a:hover{
+        text-decoration: underline;
+        color:#CC007D;
+    }
+
+    .page-link a:active, a:hover {
+        outline: 0;
     }
 
 
