--- a/views/widgets/inc/pagination.html.twig
+++ b/views/widgets/inc/pagination.html.twig
@@ -81,16 +81,16 @@
         border-color: #dc3545;
     }
 
-    .page-link a {
+    .page-link {
         text-decoration: none;
         color:#7F0F54;
     }
-    .page-link a:hover{
+    .page-link:hover{
         text-decoration: underline;
         color:#CC007D;
     }
 
-    .page-link a:active, a:hover {
+    .page-link:active, .page-link:hover {
         outline: 0;
     }
 
