--- a/views/widgets/inc/pagination.html.twig
+++ b/views/widgets/inc/pagination.html.twig
@@ -83,11 +83,12 @@
 
     .page-link {
         text-decoration: none;
-        color:#7F0F54;
+        color:unset;
     }
     .page-link:hover{
         text-decoration: underline;
-        color:#CC007D;
+        border-bottom: 3px solid #e3191a;
+        padding-bottom: 5px;
     }
 
     .page-link:active, .page-link:hover {
