--- a/views/widgets/inc/pagination.html.twig
+++ b/views/widgets/inc/pagination.html.twig
@@ -86,9 +86,8 @@
         color:unset;
     }
     .page-link:hover{
-        text-decoration: underline;
-        border-bottom: 3px solid #e3191a;
-        padding-bottom: 5px;
+        color:unset;
+
     }
 
     .page-link:active, .page-link:hover {
