--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -2,23 +2,57 @@
 
 {% block list %}
 
-{#    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
-{#        {% import _self as knp_menu %}#}
-{#      <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">#}
-{#        <h4 class="footer__sectionHeadline">Sections</h4>#}
-{#        <ul class="footer__sectionTwoColumns">#}
-{#            {{ block('children') }}#}
-{#        </ul>#}
-{#      </div>#}
-{#    {% endif %}#}
+    {#    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
+    {#        {% import _self as knp_menu %}#}
+    {#      <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">#}
+    {#        <h4 class="footer__sectionHeadline">Sections</h4>#}
+    {#        <ul class="footer__sectionTwoColumns">#}
+    {#            {{ block('children') }}#}
+    {#        </ul>#}
+    {#      </div>#}
+    {#    {% endif %}#}
 
 
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
-            <div class="col-12 col-md">
-                <img class="mb-2" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
-                <small class="d-block mb-3 text-muted">&copy; 2017-2018</small>
+
+            <div class="col-6 col-md">
+                <h5>About</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Team</a></li>
+                    <li><a class="text-muted" href="#">Locations</a></li>
+                    <li><a class="text-muted" href="#">Privacy</a></li>
+                    <li><a class="text-muted" href="#">Terms</a></li>
+                </ul>
             </div>
+            <div class="col-6 col-md">
+                <h5>About</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Team</a></li>
+                    <li><a class="text-muted" href="#">Locations</a></li>
+                    <li><a class="text-muted" href="#">Privacy</a></li>
+                    <li><a class="text-muted" href="#">Terms</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>About</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Team</a></li>
+                    <li><a class="text-muted" href="#">Locations</a></li>
+                    <li><a class="text-muted" href="#">Privacy</a></li>
+                    <li><a class="text-muted" href="#">Terms</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>About</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Team</a></li>
+                    <li><a class="text-muted" href="#">Locations</a></li>
+                    <li><a class="text-muted" href="#">Privacy</a></li>
+                    <li><a class="text-muted" href="#">Terms</a></li>
+                </ul>
+            </div>
+
             <div class="col-6 col-md">
                 <h5>Features</h5>
                 <ul class="list-unstyled text-small">
