--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -13,7 +13,7 @@
     {#    {% endif %}#}
 
 
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+    <footer class="pt-0 my-md-0 pt-md-3">
         <div class="row">
 
             <div class="col-6 col-md">
