--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -23,7 +23,7 @@
 {#        </div>#}
 {#    </div>#}
 {#</div>#}
-
+<div class="container" style="background: #212126;">
 <div class="pull-left">
     <ul class="list-inline">
         <li><a href="#">Pricing</a></li>
@@ -32,7 +32,7 @@
     </ul>
 </div>
 <p class="pull-right">© Company 2019</p>
-
+</div>
 
 <style>
 
