--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -1,6 +1,6 @@
 <footer>
-    <p class="pull-left">© Company 2014</p>
-    <ul class="list-inline">
+    <p class="float-right">© Company 2014</p>
+    <ul class="list-inline float-left">
         <li class="list-inline-item">Lorem ipsum</li>
         <li class="list-inline-item">Phasellus iaculis</li>
         <li class="list-inline-item">Nulla volutpat</li>
