--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1559569477099' %}
+{% set version = '1559569560631' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -218,7 +218,7 @@
 
 <!-- Footer -->
 
-  <footer class="footer">
+  <footer class="footer footer pt-0 my-md-0 pt-md-3">
     <div class="container">
       <div class="row">
         <div class="footer__logo col-12 col-sm-2">
