--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1559569560631' %}
+{% set version = '1559569695870' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -218,7 +218,7 @@
 
 <!-- Footer -->
 
-  <footer class="footer footer pt-0 my-md-0 pt-md-3">
+  <footer class="footer pt-0 my-md-0 pt-md-3">
     <div class="container">
       <div class="row">
         <div class="footer__logo col-12 col-sm-2">
@@ -236,7 +236,7 @@
           <div class="container">
             <div class="row">
               <nav class="staticNav col-12 col-sm-8" role="navigation">
-                {#Important Nav Links#}
+                {{ include('widgets/inc/footerSec.html.twig') }}
               </nav>
             </div>
           </div>
@@ -245,7 +245,6 @@
 
     </div>
 
-    {{ include('widgets/inc/footerSec.html.twig') }}
 
   </footer>
 
