--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1559569695870' %}
+{% set version = '1559569776636' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -232,10 +232,10 @@
 
         </div>
         <div class="socialMedia col-12">{# Social Media Links here#}</div>
-        <div class="footer_bottom">
+        <div class="footer_bottom" style=" width: 100%; ">
           <div class="container">
             <div class="row">
-              <nav class="staticNav col-12 col-sm-8" role="navigation">
+              <nav class="staticNav col-12 col-sm-12" role="navigation">
                 {{ include('widgets/inc/footerSec.html.twig') }}
               </nav>
             </div>
