--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -3,7 +3,7 @@
         <li class="list-inline-item">Phasellus iaculis</li>
         <li class="list-inline-item">Nulla volutpat</li>
     </ul>
-    <p class="float-right">© Company 2014</p>
+    <p class="float-right mt-3">© Company 2014</p>
 
 
 {#<div class="container" style="background: #212126;">#}
