--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -1,21 +1,55 @@
-    <ul class="list-inline float-left">
-        <li class="list-inline-item">Lorem ipsum</li>
-        <li class="list-inline-item">Phasellus iaculis</li>
-        <li class="list-inline-item">Nulla volutpat</li>
-    </ul>
-    <p class="float-right mt-3">© Company 2014</p>
+<ul class="list-inline float-left">
+
+    {% gimmelist route from routes with {parent: "Agbs"} %}
 
 
-{#<div class="container" style="background: #212126;">#}
-{#<div class="pull-left">#}
-{#    <ul class="list-inline">#}
-{#        <li><a href="#">Pricing</a></li>#}
-{#        <li><a href="#">Contact</a></li>#}
-{#        <li><a href="#">Terms</a></li>#}
-{#    </ul>#}
+        <li id="routeItem">
+            <a href={{ url(route) }}>
+                {{ route.name }}
+            </a>
+        </li>
+
+        <li class="list-inline-item">
+
+            <a href={{ url(route) }}>
+                {{ route.name }}
+            </a>
+
+        </li>
+
+
+    {% endgimmelist %}
+
+</ul>
+<p class="float-right mt-3">© Company 2014</p>
+
+
+{#<div class="secRoutes">#}
+{#    <div class="container" style="background: #212126;">#}
+{#        <div class="row">#}
+
+{#            <nav class="staticNav col-sm-8 col-md-8 col-xs-12" role="navigation">#}
+
+{#                <ul id="secLine" class="d-flex justify-content-around">#}
+{#                    {% gimmelist route from routes with {parent: "Agbs"} %}#}
+
+
+{#                        <li id="routeItem">#}
+{#                            <a href={{ url(route) }}>#}
+{#                                {{ route.name }}#}
+{#                            </a>#}
+{#                        </li>#}
+
+{#                    {% endgimmelist %}#}
+{#                </ul>#}
+{#            </nav>#}
+{#            <p class="footer__text col-sm-4 col-md-4 col-xs-12">© 2019 BildFrau All Rights Reserved</p>#}
+
+
+{#        </div>#}
+{#    </div>#}
 {#</div>#}
-{#<p class="pull-right">© Company 2019</p>#}
-{#</div>#}
+
 
 <style>
 
@@ -62,11 +96,11 @@
         white-space: nowrap;
     }
 
-    li#routeItem a{
+    li#routeItem a {
         background-color: transparent;
     }
 
-    li#routeItem:hover a{
+    li#routeItem:hover a {
         color: #FFFFFF;
     }
 
