--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1559570816316' %}
+{% set version = '1559570861964' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -218,7 +218,7 @@
 
 <!-- Footer -->
 
-  <footer class="footer">
+  <footer class="footer" style="padding-bottom: 0">
     <div class="container">
       <div class="row">
         <div class="footer__logo col-12 col-sm-2">
