--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1559571166360' %}
+{% set version = '1559571743686' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -246,7 +246,7 @@
             <div class="footer_bottom" style=" width: 100%; ">
                 <div class="container-fluid secFoot">
 
-                    <div class="container">
+                    <div class="container" style="background-color: #212126">
                         <div class="row">
                             <nav class="staticNav col-12 col-sm-12" role="navigation">
                                 {{ include('widgets/inc/footerSec.html.twig') }}
@@ -295,7 +295,7 @@
     .secFoot {
         padding: 0;
         margin: 0;
-        background-color: rebeccapurple;
+        background-color: #212126;
         position: absolute;
         left: 0;
     }
