--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -1,4 +1,4 @@
-<ul class="list-inline float-left">
+<ul class="list-inline float-left pt-3">
 
     {% gimmelist route from routes with {parent: "Agbs"} %}
 
