--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -15,3 +15,74 @@
 
 </ul>
 <p class="float-right mt-3">© Company 2014</p>
+
+
+
+<style>
+
+    @media (min-width: 768px) {
+        .footer .footer__text {
+            text-align: right;
+        }
+
+        li#routeItem {
+
+            padding-right: 5px;
+        }
+    }
+
+    .staticNav ul {
+        padding-left: 0;
+        margin: 5px 0;
+        list-style: none;
+    }
+
+    .staticNav ul li {
+        font-size: 1.4rem;
+        opacity: .5;
+        display: inline-block;
+        width: auto;
+        margin-right: 20px;
+    }
+
+
+    .footer__text {
+        font-size: 1.4rem;
+        text-align: left;
+        margin: 5px 0;
+    }
+
+    li#routeItem {
+        font-size: 1.4rem;
+        opacity: .5;
+        display: inline-block;
+        width: auto;
+
+        clear: both;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+
+    li#routeItem a {
+        background-color: transparent;
+    }
+
+    li#routeItem:hover a {
+        color: #FFFFFF;
+    }
+
+    .secRoutes {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        background: #212126;
+        padding: 15px 0;
+    }
+
+    ul#secLine li {
+        display: inline;
+
+    }
+
+
+</style>
