--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -14,7 +14,7 @@
     {% endgimmelist %}
 
 </ul>
-<p class="float-right mt-3">© Company 2014</p>
+<p class="float-right mt-3 pr-5">© Company 2014</p>
 
 
 
