--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -16,3 +16,25 @@
 </ul>
 <p class="float-right mt-3 pr-5">© Company 2014</p>
 
+
+
+<style>
+
+
+
+
+    li.legal {
+        font-size: 1.4rem;
+        opacity: .5;
+        display: inline-block;
+        width: auto;
+
+        clear: both;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+
+
+
+
+</style>
