--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -9,7 +9,7 @@
 
 
             <li>{{ route.name }}</li>
-    {% endgimme %} </ul>
+    {% endgimmelist %} </ul>
 
         {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
             {% import _self as knp_menu %}
