--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -2,95 +2,90 @@
 
 {% block list %}
 
+    {% gimme contentList%}
+       {% dump contentList %}
+    {% endgimme %}
 
-        <ul>
-    {% gimmelist route from routes %}
-            {% dump route %}
-
-
-            <li>{{ route.name }}</li>
-    {% endgimmelist %} </ul>
-
-        {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
-            {% import _self as knp_menu %}
-          <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">
-            <h4 class="footer__sectionHeadline">Sections</h4>
-            <ul class="footer__sectionTwoColumns">
-                {{ block('children') }}
-            </ul>
-          </div>
-        {% endif %}
+{#        {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
+{#            {% import _self as knp_menu %}#}
+{#          <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">#}
+{#            <h4 class="footer__sectionHeadline">Sections</h4>#}
+{#            <ul class="footer__sectionTwoColumns">#}
+{#                {{ block('children') }}#}
+{#            </ul>#}
+{#          </div>#}
+{#        {% endif %}#}
 
 
-        <div class="row">
+{#        <div class="row">#}
 
-            <div class="col-6 col-md">
-                <h5>About</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Team</a></li>
-                    <li><a class="text-muted" href="#">Locations</a></li>
-                    <li><a class="text-muted" href="#">Privacy</a></li>
-                    <li><a class="text-muted" href="#">Terms</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>About</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Team</a></li>
-                    <li><a class="text-muted" href="#">Locations</a></li>
-                    <li><a class="text-muted" href="#">Privacy</a></li>
-                    <li><a class="text-muted" href="#">Terms</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>About</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Team</a></li>
-                    <li><a class="text-muted" href="#">Locations</a></li>
-                    <li><a class="text-muted" href="#">Privacy</a></li>
-                    <li><a class="text-muted" href="#">Terms</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>About</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Team</a></li>
-                    <li><a class="text-muted" href="#">Locations</a></li>
-                    <li><a class="text-muted" href="#">Privacy</a></li>
-                    <li><a class="text-muted" href="#">Terms</a></li>
-                </ul>
-            </div>
+{#            <div class="col-6 col-md">#}
+{#                <h5>About</h5>#}
+{#                <ul class="list-unstyled text-small">#}
+{#                    <li><a class="text-muted" href="#">Team</a></li>#}
+{#                    <li><a class="text-muted" href="#">Locations</a></li>#}
+{#                    <li><a class="text-muted" href="#">Privacy</a></li>#}
+{#                    <li><a class="text-muted" href="#">Terms</a></li>#}
+{#                </ul>#}
+{#            </div>#}
+{#            <div class="col-6 col-md">#}
+{#                <h5>About</h5>#}
+{#                <ul class="list-unstyled text-small">#}
+{#                    <li><a class="text-muted" href="#">Team</a></li>#}
+{#                    <li><a class="text-muted" href="#">Locations</a></li>#}
+{#                    <li><a class="text-muted" href="#">Privacy</a></li>#}
+{#                    <li><a class="text-muted" href="#">Terms</a></li>#}
+{#                </ul>#}
+{#            </div>#}
+{#            <div class="col-6 col-md">#}
+{#                <h5>About</h5>#}
+{#                <ul class="list-unstyled text-small">#}
+{#                    <li><a class="text-muted" href="#">Team</a></li>#}
+{#                    <li><a class="text-muted" href="#">Locations</a></li>#}
+{#                    <li><a class="text-muted" href="#">Privacy</a></li>#}
+{#                    <li><a class="text-muted" href="#">Terms</a></li>#}
+{#                </ul>#}
+{#            </div>#}
+{#            <div class="col-6 col-md">#}
+{#                <h5>About</h5>#}
+{#                <ul class="list-unstyled text-small">#}
+{#                    <li><a class="text-muted" href="#">Team</a></li>#}
+{#                    <li><a class="text-muted" href="#">Locations</a></li>#}
+{#                    <li><a class="text-muted" href="#">Privacy</a></li>#}
+{#                    <li><a class="text-muted" href="#">Terms</a></li>#}
+{#                </ul>#}
+{#            </div>#}
 
-            <div class="col-6 col-md">
-                <h5>Features</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Cool stuff</a></li>
-                    <li><a class="text-muted" href="#">Random feature</a></li>
-                    <li><a class="text-muted" href="#">Team feature</a></li>
-                    <li><a class="text-muted" href="#">Stuff for developers</a></li>
-                    <li><a class="text-muted" href="#">Another one</a></li>
-                    <li><a class="text-muted" href="#">Last time</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Resources</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Resource</a></li>
-                    <li><a class="text-muted" href="#">Resource name</a></li>
-                    <li><a class="text-muted" href="#">Another resource</a></li>
-                    <li><a class="text-muted" href="#">Final resource</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>About</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Team</a></li>
-                    <li><a class="text-muted" href="#">Locations</a></li>
-                    <li><a class="text-muted" href="#">Privacy</a></li>
-                    <li><a class="text-muted" href="#">Terms</a></li>
-                </ul>
-            </div>
-        </div>
+{#            <div class="col-6 col-md">#}
+{#                <h5>Features</h5>#}
+{#                <ul class="list-unstyled text-small">#}
+{#                    <li><a class="text-muted" href="#">Cool stuff</a></li>#}
+{#                    <li><a class="text-muted" href="#">Random feature</a></li>#}
+{#                    <li><a class="text-muted" href="#">Team feature</a></li>#}
+{#                    <li><a class="text-muted" href="#">Stuff for developers</a></li>#}
+{#                    <li><a class="text-muted" href="#">Another one</a></li>#}
+{#                    <li><a class="text-muted" href="#">Last time</a></li>#}
+{#                </ul>#}
+{#            </div>#}
+{#            <div class="col-6 col-md">#}
+{#                <h5>Resources</h5>#}
+{#                <ul class="list-unstyled text-small">#}
+{#                    <li><a class="text-muted" href="#">Resource</a></li>#}
+{#                    <li><a class="text-muted" href="#">Resource name</a></li>#}
+{#                    <li><a class="text-muted" href="#">Another resource</a></li>#}
+{#                    <li><a class="text-muted" href="#">Final resource</a></li>#}
+{#                </ul>#}
+{#            </div>#}
+{#            <div class="col-6 col-md">#}
+{#                <h5>About</h5>#}
+{#                <ul class="list-unstyled text-small">#}
+{#                    <li><a class="text-muted" href="#">Team</a></li>#}
+{#                    <li><a class="text-muted" href="#">Locations</a></li>#}
+{#                    <li><a class="text-muted" href="#">Privacy</a></li>#}
+{#                    <li><a class="text-muted" href="#">Terms</a></li>#}
+{#                </ul>#}
+{#            </div>#}
+{#        </div>#}
 
 
 
