--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -2,23 +2,24 @@
 
 {% block list %}
 
+    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
+        {% import _self as knp_menu %}
+
+
+
+        <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">
+            <h4 class="footer__sectionHeadline">Sections</h4>
+            <ul class="footer__sectionTwoColumns">
+                {{ block('children') }}
+            </ul>
+        </div>
+    {% endif %}
 
         <ul>
     {% gimmelist route from routes %}
     {% dump route.children %}
 
-        {% if route.hasChildren and options.depth is not same as(0) and item.displayChildren %}
-            {% import _self as knp_menu %}
 
-
-
-            <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">
-                <h4 class="footer__sectionHeadline">Sections</h4>
-                <ul class="footer__sectionTwoColumns">
-                    {{ block('children') }}
-                </ul>
-            </div>
-        {% endif %}
 
 
             <li>{{ route.name }}</li>
