--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -2,6 +2,8 @@
 
 {% block list %}
 
+    {% dump item %}
+
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% import _self as knp_menu %}
 
@@ -15,15 +17,15 @@
         </div>
     {% endif %}
 
-        <ul>
-    {% gimmelist route from routes %}
-    {% dump route.children %}
+{#        <ul>#}
+{#    {% gimmelist route from routes %}#}
+{#    {% dump route.children %}#}
 
 
 
 
-            <li>{{ route.name }}</li>
-    {% endgimmelist %} </ul>
+{#            <li>{{ route.name }}</li>#}
+{#    {% endgimmelist %} </ul>#}
 
 {#        {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
 {#            {% import _self as knp_menu %}#}
