--- a/public/css/elements/footer.sass
+++ b/public/css/elements/footer.sass
@@ -1,4 +1,5 @@
 .footer
+  font-family: $fontSansSerif
   background: $colorDark
   color: $colorWhite
   padding: 20px 0px
@@ -31,7 +32,6 @@
           display: block
           margin-right: 0px
   .footer__sectionHeadline
-    font-family: $fontSerif
     font-size: 1.8rem
     font-weight: 900
     margin: 0px
@@ -45,7 +45,6 @@
       width: 64%
       height: 42px
     button
-      font-family: $fontSerif
       width: auto
       float: left
       width: 36%
