--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -1,4 +1,4 @@
-<ul class="list-inline float-left pt-3">
+<ul class="list-inline float-left col-12 col-sm-8 pt-3">
 
     {% gimmelist route from routes with {parent: "Agbs"} %}
 
@@ -14,7 +14,7 @@
     {% endgimmelist %}
 
 </ul>
-<p class="float-right mt-3 pr-5">© Company 2014</p>
+<p class="float-right col-12 col-sm-4 mt-3 pr-5">© Company 2019</p>
 
 
 
