--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -249,8 +249,10 @@
         <div class="footer_bottom">
             <div class="container">
                 <div class="row">
-                    <nav class="staticNav col-12 col-sm-8" role="navigation">
-                        {{ include('widgets/inc/footerSec.html.twig') }}
+                    <nav class="container-fluid staticNav" role="navigation">
+                        <div class="row">
+                            {{ include('widgets/inc/footerSec.html.twig') }}
+                        </div>
                     </nav>
                 </div>
             </div>
