--- a/public/css/elements/_default.sass
+++ b/public/css/elements/_default.sass
@@ -7,7 +7,10 @@ $colorBody: #F2F2F2
 $colorWhite: #fff
 $colorDark: #333333
 $colorGrey: #547688
+$colorMidGrey: #28282e
+$colorDarkGrey: #212126
 $colorTheme: #98b96a
+
 
 html
   font-size: 56%
