--- a/public/css/elements/footer.sass
+++ b/public/css/elements/footer.sass
@@ -1,6 +1,6 @@
 .footer
   font-family: $fontSansSerif
-  background: $colorDark
+  background: $colorLightGrey
   color: $colorWhite
   padding: 20px 0px
   +sm
@@ -57,5 +57,6 @@
       +sm
         text-align: right
   .footer-bottom
+    background: $colorDarkGrey
     background: #212126
     padding: 15px 0
