--- a/public/css/elements/footer.sass
+++ b/public/css/elements/footer.sass
@@ -1,6 +1,6 @@
 .footer
   font-family: $fontSansSerif
-  background: $colorLightGrey
+  background: $colorMidGrey
   color: $colorWhite
   padding: 20px 0px
   +sm
@@ -58,5 +58,9 @@
         text-align: right
   .footer-bottom
     background: $colorDarkGrey
-    background: #212126
     padding: 15px 0
+    .staticNav
+      ul
+        padding-left: 0
+        margin: 5px 0
+        list-style: none
