--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -246,7 +246,7 @@
         </div>
 
     </div>
-        <div class="footer_bottom">
+        <div class="footer_bottom py-4">
             <div class="container">
                 <div class="row">
                     <nav class="container-fluid staticNav" role="navigation">
