--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -1,4 +1,4 @@
-<ul class="list-inline col-12 col-sm-8 m-0">
+<ul class="list-inline col-12 col-sm-8">
 
     {% gimmelist route from routes with {parent: "Agbs"} %}
 
