--- a/public/css/elements/footer.sass
+++ b/public/css/elements/footer.sass
@@ -56,7 +56,7 @@
       text-align: left
       +sm
         text-align: right
-  .footer-bottom
+  .footer_bottom
     background: $colorDarkGrey
     padding: 15px 0
     .staticNav
