--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -247,15 +247,11 @@
 
     </div>
         <div class="footer_bottom py-4">
-            <div class="container">
+            <nav class="container staticNav" role="navigation">
                 <div class="row">
-                    <nav class="container-fluid staticNav" role="navigation">
-                        <div class="row">
-                            {{ include('widgets/inc/footerSec.html.twig') }}
-                        </div>
-                    </nav>
+                    {{ include('widgets/inc/footerSec.html.twig') }}
                 </div>
-            </div>
+            </nav>
         </div>
 </footer>
 
