--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -3,7 +3,7 @@
     {% gimmelist route from routes with {parent: "Agbs"} %}
 
 
-        <li class="list-inline-item legal">
+        <li class="list-inline-item legal align-middle">
             <a href={{ url(route) }}>
                 {{ route.name }}
             </a>
