--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -1,4 +1,4 @@
-<ul class="list-inline col-12 col-sm-8">
+<ul class="col-12 col-sm-8 list-inline ">
 
     {% gimmelist route from routes with {parent: "Agbs"} %}
 
@@ -14,7 +14,7 @@
     {% endgimmelist %}
 
 </ul>
-<p class="col-12 col-sm-4 text-center text-sm-right m-0">© Company 2019</p>
+<p class="col-12 col-sm-4 d-flex align-items-center text-center text-sm-right m-0">© Company 2019</p>
 
 
 
