--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -247,11 +247,12 @@
 
     </div>
         <div class="footer_bottom py-4">
-            <nav class="container staticNav" role="navigation">
+            <nav class="col-12 col-sm-8 staticNav" role="navigation">
                 <div class="row">
                     {{ include('widgets/inc/footerSec.html.twig') }}
                 </div>
             </nav>
+            <p class="col-12 col-sm-4 d-flex align-items-center justify-content-center justify-content-sm-end m-0">© Company 2019</p>
         </div>
 </footer>
 
