--- a/views/widgets/inc/footerSec.html.twig
+++ b/views/widgets/inc/footerSec.html.twig
@@ -1,4 +1,4 @@
-<ul class="col-12 col-sm-8 list-inline ">
+<ul class="list-inline ">
 
     {% gimmelist route from routes with {parent: "Agbs"} %}
 
@@ -14,9 +14,6 @@
     {% endgimmelist %}
 
 </ul>
-<p class="col-12 col-sm-4 d-flex align-items-center text-center text-sm-right m-0">© Company 2019</p>
-
-
 
 <style>
 
