--- a/public/css/elements/footer.sass
+++ b/public/css/elements/footer.sass
@@ -3,14 +3,6 @@
   background: $colorMidGrey
   color: $colorWhite
   padding: 20px 0px
-  .footer_bottom
-  background: $colorDarkGrey
-  padding: 15px 0
-    .staticNav
-      ul
-        padding-left: 0
-        margin: 5px 0
-        list-style: none
   +sm
     padding: 50px 0px
   a, p
@@ -37,6 +29,8 @@
         +sm
           display: block
           margin-right: 0px
+    .container
+      background: $colorMidGrey
   .footer__sectionHeadline
     font-size: 1.8rem
     font-weight: 900
@@ -62,3 +56,13 @@
       text-align: left
       +sm
         text-align: right
+  .footer_bottom
+    background: $colorDarkGrey
+    padding: 15px 0
+    .staticNav
+      ul
+        padding-left: 0
+        margin: 5px 0
+        list-style: none
+    .container
+      background: $colorDarkGrey
