--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -249,7 +249,7 @@
         <div class="footer_bottom py-4">
             <div class="container">
                 <div class="row">
-                    <nav class="staticNav col-12 col-sm-8" role="navigation">
+                    <nav class="staticNav col-12 col-sm-8 text-center text-sm-left" role="navigation">
                         {{ include('widgets/inc/footerSec.html.twig') }}
                     </nav>
                     <p class="col-12 col-sm-4 d-flex align-items-center justify-content-center justify-content-sm-end m-0">© Company 2019</p>
