--- a/public/css/elements/footer.sass
+++ b/public/css/elements/footer.sass
@@ -26,6 +26,14 @@
         margin-right: 20px
         margin-bottom: 10px
         font-size: 1.6rem
+        .legal 
+          font-size: 1.4rem
+          opacity: .5
+          display: inline-block
+          width: auto
+          clear: both
+          overflow: hidden
+          white-space: nowrap
         +sm
           display: block
           margin-right: 0px
