--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -48,7 +48,7 @@
       max-width: 170px
       margin: 0 auto !important
       img
-        width: 50px;
+        width: 50px
   .header__sectionName
     font-family: $fontSerif
     font-size: 4rem
@@ -57,51 +57,73 @@
     text-align: center
     text-transform: uppercase
     margin-bottom: 0px
-
   .header__search
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: absolute;
-    background: red;
-    width: 238px;
-    height: 42px;
-    font-family: $fontSerif
-    font-size: 3.6rem
-    text-align: right
-    font-style: italic
-    transition: .2s width;
-    -webkit-transition: .2s width;
-    input
-      max-width: 270px
-      text-align: right
-      padding-right: 10px
-      border: none
-      background: transparent
-      outline: none
-      +sm
-        max-width: 400px
-    button
-      background: no-repeat center url('../img/search.svg')
-      width: 27px
-      height: 27px
-      border: none
-      text-indent: -9999px
-      vertical-align: sub
-    .gsc-search-box-tools .gsc-search-box input.gsc-input
-      background-size: 0px !important
-    .gsc-input-box
-      border: none
-      height: auto
-    .gsc-input-box-hover
-      border: none
-      box-shadow: none
-    td.gsc-search-button
-      background: url('../img/search.svg') no-repeat center
-      width: 27px
-    .cse input.gsc-search-button, input.gsc-search-button
-      height: 27px
-    .cse input.gsc-search-button:hover, input.gsc-search-button:hover
-      background: none
-    .gsc-input-box-focus
-      box-shadow: none
+    display: table
+    width: 100%
+    height: 100%
+	  .search__innr
+      display: table-cell
+      text-align: center
+      vertical-align: middle
+      .searchBox 
+        display: inline-block
+        position: relative
+        height: 35px
+        width: 35px
+        box-sizing: border-box
+        margin: 0px 8px 7px 0px
+        padding: 7px 9px 0px 9px
+        border: 3px solid red
+        border-radius: 25px
+        transition: all 200ms ease
+        cursor: text
+        &:after 
+          content: ""
+          position: absolute
+          width: 3px
+          height: 20px
+          right: -5px
+          top: 21px
+          background: red
+          border-radius: 3px
+          transform: rotate(-45deg)
+          transition: all 200ms ease
+        &.active,
+        &:hover 
+          width: 200px
+          margin-right: 0px
+          &:after 
+            height: 0px
+        input
+          width: 100%
+          border: none
+          box-sizing: border-box
+          font-family: Helvetica
+          font-size: 15px
+          color: inherit
+          background: transparent
+          outline-width: 0px
+        button
+          background: no-repeat center url('../img/search.svg')
+          width: 27px
+          height: 27px
+          border: none
+          text-indent: -9999px
+          vertical-align: sub
+        .gsc-search-box-tools .gsc-search-box input.gsc-input
+          background-size: 0px !important
+        .gsc-input-box
+          border: none
+          height: auto
+        .gsc-input-box-hover
+          border: none
+          box-shadow: none
+        td.gsc-search-button
+          background: url('../img/search.svg') no-repeat center
+          width: 27px
+        .cse input.gsc-search-button, input.gsc-search-button
+          height: 27px
+        .cse input.gsc-search-button:hover, input.gsc-search-button:hover
+          background: none
+        .gsc-input-box-focus
+          box-shadow: none
