--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -2,7 +2,7 @@
     <div class="search__innr">
         <label class="searchBox" for="searchInp" >
             <form id="search" name="search_articles" method="GET" action="/app_dev.php/search">
-                <input id="searchInp" type="text" name="q" placeholder="search" value="">
+                <input id="searchInp" type="text" name="q" value="">
             </form>
             <p>Search</p>
         </label>
