--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -91,13 +91,15 @@
         &:hover 
           width: 200px
           margin-right: 0px
+          margin-top: 0px
+          cursor: pointer
           &:after 
             height: 0px
         input
           width: 100%
+          padding: 0px
           border: none
           box-sizing: border-box
-          font-family: Helvetica
           font-size: 15px
           color: inherit
           background: transparent
