--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -1,4 +1,4 @@
-<div class="header__search verticalMiddle col-4 p-0">
+<div class="header__search col-4 p-0">
     <div class="search__innr">
         <label class="searchBox" for="searchInp" >
             <form id="search" name="search_articles" method="GET" action="/app_dev.php/search">
