--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -72,7 +72,7 @@
         width: 35px
         box-sizing: border-box
         margin: 0px 8px 7px 0px
-        padding: 7px 9px 0px 9px
+        padding: 4px 9px 0px 9px
         border: 3px solid red
         border-radius: 25px
         transition: all 200ms ease
@@ -92,6 +92,7 @@
           width: 200px
           margin-right: 0px
           margin-top: 0px
+          padding-left: 10px
           cursor: pointer
           &:after 
             height: 0px
