--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -1,12 +1,10 @@
-<div class="header__search col-4 p-0">
-    <div class="search__innr">
+<div class="header__search col-4 d-flex justify-content-center align-items-center">
         <label class="searchBox" for="searchInp" >
             <form id="search" name="search_articles" method="GET" action="/app_dev.php/search">
                 <input id="searchInp" type="text" name="q" value="">
             </form>
         </label>
         <p>Search</p>
-    </div>
 </div>
 
 <script>
