--- a/public/css/elements/footer.sass
+++ b/public/css/elements/footer.sass
@@ -72,6 +72,12 @@
         padding-left: 0
         margin: 5px 0
         list-style: none
+        .legal
+          font-size: 1.4rem;
+          opacity: .5;
+          display: inline-block;
+          width: auto;
+          margin-right: 20px;  
     .container
       background: $colorDarkGrey
     .footer_text
