--- a/views/widgets/inc/searchBox.html.twig
+++ b/views/widgets/inc/searchBox.html.twig
@@ -1,4 +1,4 @@
-<div class="header__search col-4 d-flex flex-column justify-content-center align-items-center">
+<div class="header__search col-12 col-sm-4 d-flex flex-column justify-content-center align-items-center">
         <label class="searchBox" for="searchInp" >
             <form id="search" name="search_articles" method="GET" action="/app_dev.php/search">
                 <input id="searchInp" type="text" name="q" value="">
