--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -161,8 +161,7 @@
 
     <div class="container my-0">
 
-        <div class="d-flex justify-content-between">
-
+        <div class="d-flex row justify-content-between pb-3">
             <div class="d-none d-sm-block col-2 p-0">
                 <p class="header__weather row text-center justify-content-center">
                     <span class="weather-temperature col-12"></span>
