--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -10,8 +10,8 @@
     display: flex
     align-items: center
     img
-      height: 100%;
-      width: 50px;
+      height: 100%
+      width: 45px
       margin-right: 15px
       opacity: 0.6
       image-rendering: -moz-crisp-edges
