--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -136,9 +136,9 @@
 										<div class="articleGrid row">
 											{% gimmelist article from articles|start(0)|limit(3)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
 											{% if loop.index == 1 %}
-											{% include 'partials/mainArticleList.html.twig' with {'class' : 'col-6', 'image':'small', 'deck': 'none'} %}
+											{% include 'partials/mainArticleList.html.twig' with {'class' : 'col-12 col-sm-6', 'image':'small', 'deck': 'none'} %}
 											{% else %}
-											{% include 'partials/articleGrid__item.html.twig' with {'class' : 'col-3'} %}
+											{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleListSmall col-12 col-sm-6'} %}
 											{% endif %}
 											{% endgimmelist %}
 										</div>
