--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -1,5 +1,5 @@
 {# cache 'gridItem'~class {gen: article} #}
-{% dump %}
+{{ dump() }}
 {% if article.featureMedia %}
   {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380', 'fallback': 'original' } %}
     {% set rend610 = path(rendition) %}
