--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -135,6 +135,7 @@
 									<div class="col-12">
 										<div class="articleGrid row">
 											{% gimmelist article from articles|start(0)|limit(3)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
+											{{ dump(article) }}
 											{% if loop.index == 1 %}
 											{% include 'partials/mainArticleList.html.twig' with {'class' : 'col-12 col-sm-6', 'image':'small', 'deck': 'none'} %}
 											{% else %}
